cluster-b/client-pod-b2.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod-b2
  namespace: ns-b2
spec:
  containers:
  - args:
    - /bin/bash
    image: chenweien/alpine-plus:v2.0
    imagePullPolicy: IfNotPresent
    name: alpine
    stdin: true
    stdinOnce: true
    tty: true
  restartPolicy: Always
