cluster-b/svc-b-clusterIP.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  labels:
    app: app-b
  namespace: ns-b
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: app-b
