cluster-b/svc-b-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-b-nodeport
  labels:
    app: app-b
  namespace: ns-b
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
    nodePort: 30009
  selector:
    app: app-b
