cluster-b/ingress-b.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-b
  namespace: ns-b
  #Ingress will be handled by native nsx ingress controller
  annotations:
    kubernetes.io/ingress.class: "nsx"
spec:
  rules:
  - host: ingress-b.cluster-c.test.domain
    http:
      paths:
      - path: /coffee
        pathType: ImplementationSpecific
        backend:
          service:
            name: svc-b
            port:
              number: 80
